# doc_ai_parser

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.qoder/repowiki/zh/content/: 命令行界面.md  增量更新功能.md  工具函数和实用程序.md  开发者指南.md  快速开始.md  测试指南.md  部署和运维.md  项目概述.md
.qoder/repowiki/zh/content/LLM提供商适配/: LLM提供商适配.md  提供商接口规范.md  自定义提供商开发.md
.qoder/repowiki/zh/content/LLM提供商适配/官方提供商集成/: Anthropic提供商集成.md  Azure OpenAI提供商集成.md  Ollama本地模型集成.md  OpenAI提供商集成.md  官方提供商集成.md
.qoder/repowiki/zh/content/Web服务API/: Web服务API.md  同步处理机制.md  异步处理机制.md  提供商管理.md  核心API端点.md  错误处理和状态码.md
.qoder/repowiki/zh/content/数据模型设计/: 数据模型设计.md  文档模型.md  结果模型.md  请求模型.md
.qoder/repowiki/zh/content/文档处理模块/: 文档加载器.md  文档处理模块.md  智能分块器.md
.qoder/repowiki/zh/content/架构设计/: 数据流设计.md  架构设计.md  模块设计.md  系统概览.md  组件交互.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
src/: __init__.py  api.py  cli.py  config.py
src/core/: __init__.py  chunker.py  incremental.py  loader.py  merger.py  parser.py
src/models/: __init__.py  document.py  request.py  result.py
src/providers/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  custom_anthropic_provider.py  custom_openai_provider.py  factory.py  ollama_provider.py  openai_provider.py
src/utils/: __init__.py  fingerprint.py
tests/: test_chunker.py  test_providers.py
